examples/negative/effects_phase2/handle_with_undeclared_effect.kai
# Negative fixture (#520 / effects phase 2): `handle { ... }
# with NonExistent` references an effect that has no
# declaration anywhere in scope. The typer must reject by
# naming the undeclared effect, not silently produce a vacuous
# handler.

fn main() : Int = {
  let r = handle {
    1
  } with NonExistent {
    return(x) -> x
  }
  r
}
